kyverno-policies/test-ecr-policy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx-test
  namespace: ecommerce-helm
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nginx-test
  template:
    metadata:
      labels:
        app: nginx-test
    spec:
      containers:
        - name: nginx
          image: nginx:latest
          resources:
            requests:
              cpu: "100m"
              memory: "128Mi"
            limits:
              cpu: "200m"
              memory: "256Mi"
